airflow/logs/dag_id=local_to_s3_pipeline/run_id=scheduled__2026-06-04T051500+0000/task_id=run_pipeline_6/attempt=1.log
[2026-06-04T05:24:34.612+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2026-06-04T05:24:34.646+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: local_to_s3_pipeline.run_pipeline_6 scheduled__2026-06-04T05:15:00+00:00 [queued]>
[2026-06-04T05:24:34.656+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: local_to_s3_pipeline.run_pipeline_6 scheduled__2026-06-04T05:15:00+00:00 [queued]>
[2026-06-04T05:24:34.657+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2026-06-04T05:24:34.673+0000] {taskinstance.py:2330} INFO - Executing <Task(BashOperator): run_pipeline_6> on 2026-06-04 05:15:00+00:00
[2026-06-04T05:24:34.680+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'local_to_s3_pipeline', 'run_pipeline_6', 'scheduled__2026-06-04T05:15:00+00:00', '--job-id', '208', '--raw', '--subdir', 'DAGS_FOLDER/dynamic_pipeline_generator.py', '--cfg-path', '/tmp/tmpcs5aujgs']
[2026-06-04T05:24:34.683+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=1978) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2026-06-04T05:24:34.684+0000] {standard_task_runner.py:91} INFO - Job 208: Subtask run_pipeline_6
[2026-06-04T05:24:34.684+0000] {standard_task_runner.py:63} INFO - Started process 1979 to run task
[2026-06-04T05:24:34.731+0000] {task_command.py:426} INFO - Running <TaskInstance: local_to_s3_pipeline.run_pipeline_6 scheduled__2026-06-04T05:15:00+00:00 [running]> on host b044b6a9b6bd
[2026-06-04T05:24:34.828+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='subashri' AIRFLOW_CTX_DAG_ID='local_to_s3_pipeline' AIRFLOW_CTX_TASK_ID='run_pipeline_6' AIRFLOW_CTX_EXECUTION_DATE='2026-06-04T05:15:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2026-06-04T05:15:00+00:00'
[2026-06-04T05:24:34.829+0000] {taskinstance.py:430} INFO - ::endgroup::
[2026-06-04T05:24:34.845+0000] {subprocess.py:63} INFO - Tmp dir root location: /tmp
[2026-06-04T05:24:34.847+0000] {subprocess.py:75} INFO - Running command: ['/usr/bin/bash', '-c', 'cd /opt/***/src && python main.py 6']
[2026-06-04T05:24:34.855+0000] {subprocess.py:86} INFO - Output:
[2026-06-04T05:24:34.901+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 91
[2026-06-04T05:24:34.901+0000] {subprocess.py:93} INFO -     raise
[2026-06-04T05:24:34.902+0000] {subprocess.py:93} INFO -     ^^^^^
[2026-06-04T05:24:34.902+0000] {subprocess.py:93} INFO - SyntaxError: invalid syntax
[2026-06-04T05:24:34.904+0000] {subprocess.py:97} INFO - Command exited with return code 1
[2026-06-04T05:24:34.904+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2026-06-04T05:24:34.912+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/bash.py", line 243, in execute
    raise AirflowException(
airflow.exceptions.AirflowException: Bash command failed. The command returned a non-zero exit code 1.
[2026-06-04T05:24:34.918+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=local_to_s3_pipeline, task_id=run_pipeline_6, run_id=scheduled__2026-06-04T05:15:00+00:00, execution_date=20260604T051500, start_date=20260604T052434, end_date=20260604T052434
[2026-06-04T05:24:34.934+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 208 for task run_pipeline_6 (Bash command failed. The command returned a non-zero exit code 1.; 1979)
[2026-06-04T05:24:34.940+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2026-06-04T05:24:34.953+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2026-06-04T05:24:34.956+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
